--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,7 @@ a:hover, .navBtn:active { text-decoration: none; color:rgb(120,50,250); }
 :root {
   /* --c1:#fefefe; */
   --c1: rgb(245, 237, 239);
+  --c2: floralwhite;
   --v1: #fefefe 119.5deg, transparent 120.5deg;
   --v2: rgba(218,170,168,0.2) 119.5deg, transparent 120.5deg;
   --v3: rgba(249,244,177,0.3);
@@ -59,7 +60,7 @@ html {
 .bar {
   display: flex;
   width: 100%;
-  background-color: var(--c1);
+  background-color: var(--c2);
   /* background: rgba(140,140,140,0.2); */
   
   padding: 0;
@@ -109,7 +110,7 @@ html {
 .header img {
   order: 1;    
   width: 45px;
-  background-color: var(--c1);
+  background-color: var(--c2);
   position: absolute;
   /* margin-top: 5px; */
   /* margin-bottom: 10px; */
@@ -122,7 +123,7 @@ html {
   /* position: fixed; */
   color: cadetblue;
   text-align: center;
-  background-color: var(--c1);
+  background-color: var(--c2);
   padding-top: 5px;
   padding-bottom: 10px;
   /* left: 50%;
