--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: #efefef;
+    background-image:linear-gradient(to right, #dbaead, #c1ad48, #a1d1e6);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -19,7 +19,29 @@
     overflow: hidden;
     overscroll-behavior: none;
   }
-  
+  /* Style the video: 100% width and height to cover the entire window */
+  #video {
+    order: 1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100%;
+    min-width: 10vw;
+    min-height: 10vh;
+  }
+  #center-logo {
+    position: relative;
+  }
+  #B4KCircle {
+    /* top: 50%; */
+    position: absolute;
+    width: 40vw;
+    min-width: 1vw;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
   body {
     position: fixed;
     overflow: hidden;
