--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,16 @@
   /* Style the video: 100% width and height to cover the entire window */
   #video {
     order: 1;
-    position: absolute;
+    display: flex;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100%;
+  }
+  .video-horizontal {
+    order: 1;
+    position:relative;
+    display:inline-block;
     left: 0;
     top: 0;
     width: 100vw;
@@ -30,17 +39,33 @@
     min-width: 10vw;
     min-height: 10vh;
   }
+  .video-vertical {
+    position:absolute;
+    transform-origin: top left;
+    /* transform: rotate(90deg); */
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100%;
+    min-width: 10vw;
+    min-height: 10vh;  }
   #center-logo {
-    position: relative;
-  }
-  #B4KCircle {
-    /* top: 50%; */
     position: absolute;
-    width: 40vw;
-    min-width: 1vw;
     top: 50%;
     left: 50%;
+    /* bottom: 50%; */
+    /* right:50%; */
     transform: translate(-50%, -50%);
+  }
+  #B4KCircle {
+    position: relative;
+    width: 30vw;
+    min-width: 10vw;
+    max-width: 30vw;
+    max-height: 50vh;
+    /* top: 0;
+    left: 50%;
+    transform: translate(-50%, -120%); */
   }
   body {
     position: fixed;
