--- a/src/styles.css
+++ b/src/styles.css
@@ -29,8 +29,7 @@
     height: 100%;
   }
   .video-horizontal {
-    order: 1;
-    position:relative;
+    position:absolute;
     display:inline-block;
     left: 0;
     top: 0;
@@ -49,6 +48,16 @@
     height: 100%;
     min-width: 10vw;
     min-height: 10vh;  }
+  #header-logo {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 0;
+  }
+  #B4KLogo {
+    position: relative;
+    max-width: 100px;
+  }
   #center-logo {
     position: absolute;
     top: 50%;
@@ -60,9 +69,9 @@
   #B4KCircle {
     position: relative;
     width: 30vw;
-    min-width: 10vw;
+    min-width: 5vw;
     max-width: 30vw;
-    max-height: 50vh;
+    /* max-height: 50vh; */
     /* top: 0;
     left: 50%;
     transform: translate(-50%, -120%); */
