--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,8 @@
     background-image: linear-gradient( #c1ad48, #dbaead, #a1d1e6); 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    text-shadow: -2px -2px rgba(0,0,0,0.1);
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #034b61;
   }
   html,
   body,
