--- a/src/styles.css
+++ b/src/styles.css
@@ -103,8 +103,9 @@
     /* padding-top: 10px; */
     top:10px;
     font-style: italic;
-    font-size: 20px;
+    font-size: 4vh;
     left: 30%;
+    padding-right: 10px;
   }
   #about-text {
     font-size: 20px;
@@ -295,6 +296,16 @@
     width: 90vw;
   }
   
+  .paypal-component b {
+    width: 90vw;
+    font-size: 12px;
+    text-align:center;
+  }
+
+  #kid-with-ball {
+    max-width: 200px;
+  }
+  
   .about-image {
     padding: 10px;
     max-width: 300px;
@@ -321,6 +332,7 @@
     padding: 10px;
     margin: 10px;
     max-width: 70%;
+    font-size: 1em;
     /* max-width: 50% */
   }
 
