--- a/src/styles.css
+++ b/src/styles.css
@@ -74,6 +74,7 @@
   #header-logo {
     position: absolute;
     left: 50%;
+    padding-top: 20px;
     transform: translateX(-50%);
     top: 0;
   }
@@ -213,24 +214,25 @@
     background-color: rgba(125, 208, 247, 0.1);
   }
   .top-left {
-    padding: 2vw;
-    padding-bottom: 0vh;
+    font-size: 36px;
+    padding-bottom: 5vh;
     color:  #c1ad48;
   }
   .top-right {
-    padding: 1vw;
-    padding-bottom: 0vh;
+    padding-bottom: 5vh;
+    /* padding-bottom: 0vh; */
     color: #a1d1e6;
+    font-size: 36px;
   }
   .bottom-left {
     padding: 2vw;
-    padding-bottom: 15vh;
+    padding-top: 15vh;
     font-size: 36px;
     color:  #c1ad48;
   }
   .bottom-right {
     padding: 1vw;
-    padding-bottom: 15vh;
+    padding-top: 15vh;
     font-size: 36px;
     color: #a1d1e6;
   }
@@ -313,6 +315,7 @@
 
   .about-section-1 {
     position: relative;
+    font-size: 1em;
     /* top: 20% */
   }
   .about-section-2 {
